Moved lifecycle mgt styles to lifecycle-styles.csss and fixed alignment of the lifecycle dropdown

--- a/apps/publisher/themes/default/css/custom-theme.css
+++ b/apps/publisher/themes/default/css/custom-theme.css
@@ -590,31 +590,6 @@ a.ctrl-filter-category:hover {
 }
 
 /* ========================================================================
- * Lifecycle template styling
- * ======================================================================== */
-
- .transition-inputs-instructions {
-    padding-bottom: 10px;
- }
- .disable-lcmgt-btns {
-   pointer-events: none;
-   cursor: default;
- }
- .lifecycles-list {
-   table-layout: fixed;
-   width: 500px;
- }
- .lifecycles-mgt-icon {
-   display: inline-block;
-   margin-right: 10px;
-   margin-top: -5px;
- }
- .lifecycles-mgt-remove-icon {
-   display: inline-block;
-   margin-right: 10px;
-   margin-top: -5px;
- }
-/* ========================================================================
  * Sorting template styling
  * ======================================================================== */
 
